--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url(./images/background2.jpg); 
+    background: url(./images/background.jpg); 
     background-size: cover;
 }
 
@@ -17,18 +17,17 @@ body {
 }
 
 .key {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 80px;
-    margin: 1rem;
-    padding: 1rem 1rem;
-    font-size: 1rem;
-    transition: all .07s;
     border: .3rem solid black;
     border-radius: .5rem;
-    background: rgba(0,0,0,0.6);
+    margin: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+    transition: all .07s ease;
+    width: 10rem;
+    text-align: center;
     color: ivory;
+    background: rgba(0,0,0,0.6);    
+    
 }
 
 .playing {
@@ -42,6 +41,15 @@ kbd {
 }
 
 .sound {
+
+    font-size: 1rem;
     color: #ffc600;
     text-transform: uppercase;
+}
+
+@media (max-width: 1000px) {
+
+    .keys {
+       flex-wrap: wrap;
+    }
 }
